@@ -1729,21 +1729,21 @@ public class leland
 		new WriteHandlerPtr[] { 0 }
 	);
 	
-	static struct CustomSound_interface dac_custom_interface =
-	{
+	static CustomSound_interface dac_custom_interface = new CustomSound_interface
+	(
 	    leland_sh_start,
 	    leland_sh_stop
-	};
+	);
 	
-	static struct CustomSound_interface i186_custom_interface =
-	{
+	static CustomSound_interface i186_custom_interface = new CustomSound_interface
+	(
 	    leland_i186_sh_start
-	};
+	);
 	
-	static struct CustomSound_interface redline_custom_interface =
-	{
+	static CustomSound_interface redline_custom_interface = new CustomSound_interface
+	(
 	  	redline_i186_sh_start
-	};
+	);
 	
 	
 	
