@@ -4,6 +4,7 @@
 -Improved InitDriverPtr not to mess with init_machine
 -MachineInitPtr support
 -Improved InitDriverPtr ,MachineDriverPtr if they start with static
+-Added custom sound support interface
 
 07/03/2019
 ==========
